--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "serve": "nodemon index.js"
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
     "yargs": "^18.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
