--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "serve": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.2",
+    "validator": "^13.15.20",
     "yargs": "^18.0.0"
   },
   "devDependencies": {
